WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
174185
Crashing with information should have an abort reason
https://bugs.webkit.org/show_bug.cgi?id=174185
Summary
Crashing with information should have an abort reason
Keith Miller
Reported
2017-07-05 16:24:03 PDT
Crashing with information should have an abort reason
Attachments
Patch
(5.48 KB, patch)
2017-07-05 16:27 PDT
,
Keith Miller
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Keith Miller
Comment 1
2017-07-05 16:27:20 PDT
Created
attachment 314664
[details]
Patch
Saam Barati
Comment 2
2017-07-05 16:29:26 PDT
Comment on
attachment 314664
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=314664&action=review
> Source/JavaScriptCore/dfg/DFGGraph.cpp:-1455 > - WTFReportBacktrace();
Why get rid of this?
Keith Miller
Comment 3
2017-07-05 16:37:16 PDT
Comment on
attachment 314664
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=314664&action=review
>> Source/JavaScriptCore/dfg/DFGGraph.cpp:-1455 >> - WTFReportBacktrace(); > > Why get rid of this?
The CRASH macro already does this.
Radar WebKit Bug Importer
Comment 4
2017-07-05 16:37:59 PDT
<
rdar://problem/33146457
>
WebKit Commit Bot
Comment 5
2017-07-05 17:05:40 PDT
Comment on
attachment 314664
[details]
Patch Clearing flags on attachment: 314664 Committed
r219172
: <
http://trac.webkit.org/changeset/219172
>
WebKit Commit Bot
Comment 6
2017-07-05 17:05:42 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug