Crashing with information should have an abort reason https://bugs.webkit.org/show_bug.cgi?id=174185

Reviewed by Saam Barati.

Source/JavaScriptCore:

Add crash information for the abstract interpreter and add an enum
value for object allocation sinking.

* assembler/AbortReason.h:
* dfg/DFGAbstractInterpreterInlines.h:
(JSC::DFG::AbstractInterpreter<AbstractStateType>::verifyEdge):
* dfg/DFGGraph.cpp:
(JSC::DFG::logDFGAssertionFailure):
* dfg/DFGObjectAllocationSinkingPhase.cpp:

Source/WTF:

Fix an ifdef to actually work with X86_64. It turns out X64_64 is
not an architecture... Whoops.

* wtf/Assertions.cpp:


Canonical link: https://commits.webkit.org/191018@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219172 268f45cc-cd09-0410-ab3c-d52691b4dbfc